...
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

...
        app:layout_anchorGravity="bottom|start"
        app:srcCompat="@drawable/ic_baseline_forward_24px"
        android:tint="@android:color/white"
        android:rotation="180" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/forward_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="@dimen/fab_margin"
        android:padding="0dp"
        android:tint="@android:color/white"
...
